feat: Change LegacyLauncher to ModLauncher and add UI's