@@ -1,7 +1,7 @@
 import net.fabricmc.loom.LoomGradleExtension
 
 plugins {
-    id "fabric-loom" version "0.12-SNAPSHOT"
+    id "fabric-loom" version "1.0-SNAPSHOT"
 }
 
 sourceCompatibility = 17
@@ -10,7 +10,6 @@ targetCompatibility = 17
 def minecraftVersion = "1.18.2"
 def asmVersion = "9.3"
 def mixinVersion = "0.8.5"
-def ultralightJava = "0.4.12"
 def mainClass = "com.eteryun.launch.Main"
 
 version "1.0.0"
@@ -33,14 +32,17 @@ for (def runConfig : LoomGradleExtension.get(project).getRunConfigs()) {
 dependencies {
     minecraft "com.mojang:minecraft:$minecraftVersion"
     mappings loom.officialMojangMappings()
-    implementation("com.github.heni123321:LegacyLauncher:ac106bbe00") {
-        transitive = false
-    }
     implementation "org.spongepowered:mixin:$mixinVersion"
 
     implementation "com.github.TheKodeToad.fabric-loom:fabric-loom:namedofficial-SNAPSHOT"
 
     implementation 'me.friwi:jcefmaven:105.3.36'
+
+    implementation "cpw.mods:modlauncher:8.1.3"
+
+    implementation "cpw.mods:modlauncher:8.1.3:api"
+
+    implementation "cpw.mods:grossjava9hacks:1.3.3"
 
     implementation "org.ow2.asm:asm:$asmVersion"
     implementation "org.ow2.asm:asm-analysis:$asmVersion"
@@ -53,19 +55,35 @@ dependencies {
     annotationProcessor "org.ow2.asm:asm-commons:$asmVersion"
     annotationProcessor "org.ow2.asm:asm-tree:$asmVersion"
     annotationProcessor "org.ow2.asm:asm-util:$asmVersion"
-
-    implementation 'org.reflections:reflections:0.10.2'
 }
 
 loom {
+    runs {
+        client {
+            vmArgs "--add-opens=java.base/sun.security.util=ALL-UNNAMED", "--add-opens=java.base/java.util.jar=ALL-UNNAMED"
+        }
+    }
+
     mixin {
         useLegacyMixinAp = true
         refmapTargetNamespace = "official"
+        defaultRefmapName = "eteryun-refmap.json"
     }
 }
 
 remapJar {
     targetNamespace = "official"
+}
+
+jar {
+    manifest {
+        attributes(
+                "Premain-Class": "com.eteryun.launch.agent.Agent",
+                "Agent-Class": "com.eteryun.launch.agent.Agent",
+                "Launcher-Agent-Class": "com.eteryun.launch.agent.Agent",
+                "Main-Class": mainClass,
+        )
+    }
 }
 
 compileJava.options.encoding = 'UTF-8'
